# SDC_Lab

src/midterm_project/localization/: CMakeLists.txt  final submission1.csv  final submission2.csv  final submission3.csv
src/midterm_project/localization/config/: ekf.yaml  ekf2.yaml  itri.rviz
src/midterm_project/localization/launch/: icp1.launch  icp2.launch  icp2_no_pcd.launch  icp3.launch  itri.launch  nuscenes.launch  nuscenes_ekf.launch
src/midterm_project/localization/results/: final_submit1.csv  results_1.csv  results_map2car.csv
src/midterm_project/localization/src/: icp_locolization1.cpp  icp_locolization2.cpp  icp_locolization3.cpp  icp_locolization_ekf.cpp  localizer_node.cpp  localizer_node2.cpp  mergePCD.cpp
src/sdc_hw3/src/: Kalman2D.py  kalman_filter.py  自主駕駛車技術 作業3報告.docx
src/sdc_hw4/: 自主駕駛車技術 作業4報告.docx
src/sdc_hw4/kalman_filter/src/: fusion.py  kalman_filter.py
